tests/baselines/reference/superWithTypeArgument.errors.txt
superWithTypeArgument.ts(7,14): error TS2754: 'super' may not use type arguments.


==== superWithTypeArgument.ts (1 errors) ====
    class C {
        
    }
    
    class D<T> extends C {
        constructor() {
            super<T>();
                 ~~~
!!! error TS2754: 'super' may not use type arguments.
        }
    }